cdpgate owns the real browser: profiles, keyed apps, scoped approvals
- BrowserSupervisor: waits for a browser running without cdpgate to be quit
  from its own menu, backs up sessions, launches under --remote-debugging-pipe
  and opens each profile by hand-off so every CDP context is known by name
- Protocol v2: every connection opens with a gate frame and hears a gate
  reply; ungated profile listing; keyed apps prove an Ed25519 key per
  connection instead of presenting a bearer token
- One approval window for attested and keyed requests; a scope-breadth cap
  (unscoped: 1h); five-minute expiry warning with extend; unified access list
- Hub: sessions belong to the connection that attached them; no consumer may
  close the browser; tabs placed in the scoped profile (by default context
  or by hand-off, measured)
- PipeIo: keep bytes after a frame's NUL (frames were being dropped);
  idempotent close. Client retries briefly while the next pipe instance is made
- cdpg: profiles, send --target, listen; approval wait no longer counts
  against the reply timeout
- Trials: LiveGateTrial 30/30 and RestoreTrial 7/7 against a scratch profile

Co-Authored-By: Claude Opus 5.5 (1M context) <noreply@anthropic.com>